# multimodal_fusion

./: CMakeLists.txt  package.xml
launch/: experiment.launch.py  multimodal_fusion.launch.py
script/: experiment_conversation.py  experiment_simple.py  fusion.py
script/utils/: move_robot.py  utils.py
