<?xml version="1.0"?>
<package format="2">
  <name>multimodal_fusion</name>
  <version>0.0.0</version>
  <description>The multimodal_fusion package</description>

  <author email="davide.ferrari95@unimore.it">Davide Ferrari</author>
  <maintainer email="davide.ferrari95@unimore.it">Davide Ferrari</maintainer>
  <license>BSD</license>

  <!-- Build Dependancies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <!-- Custom Message Creation Dependancies -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>get_pose_emulator</exec_depend>

</package>
